# ASAPCabinetFE

./: .gitattributes  .gitignore  .gitmodules  .imgbotconfig  ARCHITECTURE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  Makefile  README.md  TODO  UserManual.md  UsersManual.md  apt-packages.txt  brew-packages.txt  compile.sh  config.cpp  config.ini  ffmpeg.txt  generate_media.sh  generate_mp4_media.sh  generate_png_media.sh  main.cpp  missing_media.sh  pacman-packages.txt  screenshot_daemon.cpp  tableloader.txt  version.h.in
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: compile_release.yml  compile_test.yml
assets/: config.ini
flatpak/: README.md  com.asapcabinetfe.ASAPCabinetFE.yml  io.asapcabinetfe.ASAPCabinetFE.desktop  io.asapcabinetfe.ASAPCabinetFE.metainfo.xml  io.asapcabinetfe.ASAPCabinetFE.yml  org.asapcabinetfe.ASAPCabinetFE.desktop  org.asapcabinetfe.ASAPCabinetFE.metainfo.xml  rust-vendor.toml
macOS/: Info.plist  appicon.icns
src/: asset_manager.cpp  asset_manager.h  config.cpp  config.h  config.ini  config_gui.cpp  config_gui.h  input_manager.cpp  input_manager.h  logging.h  main.cpp  render_utils.cpp  render_utils.h  screenshot_utils.cpp  screenshot_utils.h  sdl_guards.h  table_utils.cpp  table_utils.h  transition_manager.cpp  transition_manager.h  video.cpp
src/capture/: iscreenshot_manager.h  process_handler.cpp  process_handler.h  screenshot_capture.cpp  screenshot_capture.h  screenshot_manager.cpp  screenshot_manager.h  screenshot_window.cpp  screenshot_window.h
src/config/: config_file_handler.cpp  config_file_handler.h  config_gui.cpp  config_gui.h  config_loader.cpp  config_loader.h  config_manager.cpp  config_manager.h  config_schema.cpp  config_schema.h  config_service.cpp  config_service.h  default_config_factory.cpp  default_config_factory.h  iconfig_service.h  settings.h  settings_manager.cpp  settings_manager.h  settings_parser.cpp  settings_parser.h  settings_section.h  tooltips.h
src/config/ui/: button_handler.cpp  button_handler.h  config_gui.cpp  config_gui.h  config_state.cpp  config_state.h  config_ui.cpp  config_ui.h  event_handler.cpp  event_handler.h  generic_section_renderer.cpp  generic_section_renderer.h  input_handler.cpp  input_handler.h  isection_renderer.h  section_config.h  section_renderer.cpp  section_renderer.h  setup_editor.cpp  setup_editor.h  table_metadata_renderer.cpp  table_metadata_renderer.h  tooltips.h  ui_element_renderer.cpp  ui_element_renderer.h
src/core/: app.cpp  app.h  dependency_factory.cpp  dependency_factory.h  first_run.cpp  first_run.h  gui_manager.cpp  gui_manager.h  iapp.h  iapp_callbacks.h  imgui_manager.cpp  imgui_manager.h  iwindow_manager.h  joystick_manager.cpp  joystick_manager.h  loading_progress.h  loading_screen.cpp  loading_screen.h  playfield_overlay.cpp  playfield_overlay.h  sound_manager.cpp  sound_manager.h  system_initializer.cpp  system_initializer.h  window_manager.cpp  window_manager.h
src/core/ui/: imgui_manager.cpp  imgui_manager.h  launch_popup.h  loading_progress.h  loading_screen.cpp  loading_screen.h  metadata_panel.cpp  metadata_panel.h  modal_dialog.cpp  modal_dialog.h  playfield_overlay.cpp  playfield_overlay.h
src/data/: manufacturers.h  table_data.h
src/data/asapcab/: asap_index_manager.cpp  asap_index_manager.h  asapcab_database_builder.cpp  asapcab_database_builder.h  asapcab_database_manager.cpp  asapcab_database_manager.h  asapcab_index_manager.cpp  database_matchmaking.cpp  database_matchmaking.h  database_unifier.cpp  database_unifier.h  table_override_manager.cpp  table_override_manager.h
src/data/ipdb/: ipdb_downloader.cpp  ipdb_downloader.h  (+4 more)
src/editor/: button_actions.cpp  button_actions.h  editor.cpp  editor.h  editor_binary.cpp  editor_first_run.cpp  editor_first_run.h  editor_ui.cpp  editor_ui.h  footer_actions.cpp  footer_actions.h  header_actions.cpp  header_actions.h  menu_actions.cpp  menu_actions.h  sorting_filters.cpp  sorting_filters.h
src/input/: input_manager.cpp  input_manager.h
src/keybinds/: iinput_manager.h  ikeybind_provider.h  input_manager.cpp  input_manager.h  keybind_manager.cpp  keybind_manager.h
src/launcher/: itable_launcher.h  table_launcher.cpp  table_launcher.h
src/log/: logger.cpp  logger.h  logger_proxy.cpp  logging.h
src/render/: asset_manager.cpp  asset_manager.h  ffmpeg_player.cpp  ffmpeg_player.h  iasset_manager.h  irenderer.h  itable_loader.h  ivideo_player.h  opengl_player.cpp  opengl_player.h  renderer.cpp  renderer.h  table_data.h  table_loader.cpp  table_loader.h  texture_cache.cpp  title_renderer.h  transition_manager.cpp  transition_manager.h  video_player.cpp  video_player.h  video_player_cache.cpp  video_player_factory.cpp  video_player_factory.h  vlc_player.cpp  vlc_player.h  vps_database_client.cpp
src/sound/: isound_manager.h  pulseaudio_player.cpp  pulseaudio_player.h  sound_manager.cpp  sound_manager.h
src/table/: asset_manager.cpp  asset_manager.h  table_manager.cpp  table_manager.h
src/tables/: asap_index_manager.cpp  asap_index_manager.h  data_enricher.cpp  data_enricher.h  file_scanner.cpp  file_scanner.h  itable_callbacks.h  itable_loader.h  manufacturers.h  path_utils.cpp  path_utils.h  table_data.h  table_loader.cpp  table_loader.h  table_override_editor.cpp  table_override_editor.h  table_override_manager.cpp  table_override_manager.h  table_patcher.cpp  table_patcher.h  vpin_scanner.cpp  vpin_scanner.h  vps_database_client.cpp  vps_database_client.h  vps_database_scanner.cpp  vps_database_scanner.h  vpx_scanner.cpp  vpx_scanner.h  vpxtool_scanner.cpp  vpxtool_scanner.h
src/utils/: editor_tooltips.h  ilogger.h  logger.cpp  logger.h  logging.h  manufacturers.h  media_preview.cpp  media_preview.h  os_utils.cpp  os_utils.h  path_utils.cpp  path_utils.h  sdl_guards.h  sha_utils.cpp  sha_utils.h  string_utils.cpp  string_utils.h  tooltips.h  version_checker.cpp  version_checker.h  vpinballx_ini_reader.cpp  vpinballx_ini_reader.h
src/vpin_ffi_wrapper/: Cargo.toml.in
tools/: generate_media.sh  missing_media.sh
(+121 files in other folders)
